--- a/app/assets/stylesheets/responsive/m.scss
+++ b/app/assets/stylesheets/responsive/m.scss
@@ -228,6 +228,7 @@
     padding-top: 0px;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    border: none;
     #edition {
       width: 100%;
       margin: auto;
